# summaree_bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: ssh-deploy.yml
alembic/: README  env.py
alembic/versions/: 0712891cc70a_add_hashtags_to_transcript.py  09d1b41a36a3_change_relation_on_invoice_to_tg_user.py  12c619b7bdc0_add_token_and_user_models.py  188a84a328f8_make_telegramchat_language_optional.py  24dfab84be35_create_m2m_relationship_to_exclude_.py  43fa1a46e6c2_subscription_logic.py  4ffb2fa00b19_move_tg_user_and_tg_chat_relation_to_.py  50b6c003cdbb_make_transcript_duration_optional_.py  5280326a34be_add_ondelete_cascade_to_summary_topic_.py  5d5bcd24672e_add_discounted_price_to_product.py  5f7ac4e1f495_prepare_transcript_model_for_text_.py  673334ac8b3c_add_telegramchat_transcript_relationship.py  69d04b0ec234_invoice_logic.py  72db6b646fe5_make_user_email_optional.py  7e723906be66_bigint_on_chats_to_users_rel.py  8186365a22ab_add_openai_request_data_to_summary.py  82501d0b6ac4_add_paid_at_field_to_invoice.py  83e32f17ca75_add_reaction_emoji_to_transcript.py  8e0d861d5ce0_add_ondelete_cascade_on_telegram_user_.py  90bc624d3692_delete_all_emtpy_transcripts.py  a7a4bd897fda_add_ondelete_cascade_to_transcript.py  a8ffea5dd099_add_finished_at_columns_to_summary_.py  (+12 more)
config/: __init__.py  ignored.py
scripts/: create_database.py  delete_all_transcripts_and_summaries.py  delete_all_users_and_chats.py  import_remote_db.sh
summaree_bot/: .env.example  __init__.py
summaree_bot/bot/: db.py  (+12 more)
(+48 files in other folders)
