[project]
name = "summaree-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "contourpy<1.3.3",
    "deepl>=1.25.0",
    "dnspython>=2.8.0",
    "jinja2>=3.1.6",
    "jiter>=0.12.0",
    "matplotlib>=3.9.0",
    "numpy<2.3.0",
    "openai>=2.8.1",
    "pandas<2.3.0",
    "prettytable>=3.17.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "python-telegram-bot[callback-data,job-queue,webhooks]>=22.5",
    "sqlalchemy>=2.0.44",
    "telethon>=1.42.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

line-length = 120

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pylint.messages_control]
disable = [    "W1203",
    "W1203",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]

[tool.uv.pip]
only-binary = [":all:"]
